--- a/index.html
+++ b/index.html
@@ -6,13 +6,74 @@
 		<meta name="format-detection" content="telephone=no">
 		<link rel="stylesheet" href="css/reset.css">
 		<style type="text/css">
-			
+			html {
+				width: 100%;
+				height: 100%;
+				overflow-x: hidden;
+			}
+			body {
+				text-align: left;
+				width: 100%;
+				overflow: hidden;
+				background: #e9dfc7;
+			}
+			.m-read-content {
+				font-size: 14px;
+				color: #555;
+				line-height: 31px;
+				padding: 15px;
+			}
+			.m-read-content h4 {
+				font-size: 20px;
+				color: #736357;
+				border-bottom: 1px solid #736357;
+				letter-spacing: 2px;
+				margin: 0 0 1em 0;
+			}
+			.m-read-content p {
+				text-indent: 2em;
+				margin: 0.5em 0;
+				letter-spacing: 0px;
+				line-height: 24px;
+			}
+			.u-tab {
+				height: 34px;
+				margin: 10px auto;
+				line-height: 34px;
+				border-radius: 8px;
+				border: 1px solid #858382;
+				font-size: 12px;
+				background: #000;
+				opacity: 0.9;
+			}
+			.u-tab li {
+				display: inline-block;
+				width: 49%;
+				border-right: 1px solid #858382;
+				text-align: center;
+				color: #fff;
+			}
+			.u-tab li:nth-child(2) {
+				border-right: none;
+			}
+			.m-button-bar {
+				width: 70%;
+				max-width: 800px;
+				padding: 5px;
+				margin: 0 auto;
+			}
 		</style>
 	</head>
 	<body>
         <div id="root" class="container">
             <div id="fiction_chapter_title"></div>
-            <div id="fiction_container" class="m-read-content"></div>
+            <div id="fiction_container" class="m-read-content">
+				<h4>第一章、打世界顶尖级</h4>
+				<p>啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干</p>
+				<p>啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干</p>
+				<p>啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干</p>
+				<p>啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干啊实打实大苏打撒旦撒旦犯得上广泛豆腐干</p>
+			</div>
             <div class="m-button-bar">
                 <ul class="u-tab">
                     <li id="prev_button">上一章</li>
